# metacat-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  FEATURES.md
docs/decisions/: ADR-001-rest-fastapi-mock-first.md
docs/features/: FEAT-001-api-skeleton.md
example_data/: facet_exposures.json  facet_values.json  mappings.json
scripts/: harvest_ariadne.py  harvest_clarin.py  harvest_common.py  harvest_gotriple.py
src/metacat_api/: config.py  logging_setup.py  main.py
src/metacat_api/datasources/: __init__.py  base.py  json_store.py  mock.py  sparql.py
src/metacat_api/harvesters/: harvest_ariadne.py  harvest_clarin.py  harvest_common.py  harvest_gotriple.py
src/metacat_api/harvesters/clarin/: vlo-query-collection.json  vlo_querymodule.py
src/metacat_api/mock_data/: catalogues.json  concepts.json  snapshots.json  vocabularies.json
src/metacat_api/models/: __init__.py  catalogue.py  common.py  facet.py  mapping.py  snapshot.py  vocabulary.py
src/metacat_api/routes/: activity.py  catalogues.py  facets.py  harvest.py  mappings.py  snapshots.py  system.py  vocabularies.py
src/metacat_api/services/: catalogues.py  facets.py  mappings.py  schedule.py  vocabularies.py
tests/: conftest.py  test_catalogues.py  test_facets.py  test_json_store.py  test_mappings.py  test_system.py  test_vocabularies.py
