[project]
name = "metacat-api"
version = "0.1.0"
description = "REST API serving the MetaCat catalogue-of-catalogues dashboard for ATRIUM."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Foxcub", email = "julien.homo@foxcub.fr" }]
dependencies = [
    "fastapi[standard]>=0.139.2",
    "jq>=1.12.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "requests>=2.34.2",
    "sparqlwrapper>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx2>=2.7.0",
    "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/atrium-research/metacat-api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metacat_api"]

[tool.ruff]
line-length = 160
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Header"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
